--- a/package.json
+++ b/package.json
@@ -1,20 +1,32 @@
 {
   "name": "doacts238",
+  "homepage": "https://new.doacts238/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.8.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.0",
+    "classnames": "^2.2.6",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "mdi-react": "^6.5.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.3.0",
+    "react-share": "^3.0.1",
+    "react-truncate-markup": "^4.1.0",
+    "typeface-roboto": "0.0.75"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "flow": "flow",
+    "flow-typed": "flow-typed"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -30,5 +42,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-preset-flow": "^6.23.0",
+    "flow-bin": "^0.114.0",
+    "flow-typed": "^2.6.2"
   }
 }
