Got SSL working and renamed subdomain from new to testing.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "doacts238",
-  "homepage": "https://new.doacts238/",
+  "homepage": "https://testing.doacts238.org/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
