Added YouTube video support to database, php scripts, and sermin info page.  Added react youtube component which is a thin wrapper around the YouTube API.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,8 @@
 {
   "short_name": "Do Acts 2:38!",
-  "name": "Do Acts 2:38!  Online Sermons",
-  "icons": [{
+  "name": "Do Acts 2:38! Online Sermons",
+  "icons": [
+    {
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
@@ -18,6 +19,7 @@
     }
   ],
   "start_url": "/",
+  "scope": "/",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
