--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "3.3.0",
     "react-share": "^3.0.1",
     "react-truncate-markup": "^4.1.0",
+    "react-youtube": "^7.9.0",
     "typeface-roboto": "0.0.75"
   },
   "scripts": {
